# autonomous_democar_ros1

./: README.md
src/democar_core/: CMakeLists.txt  package.xml
src/democar_core/config/: democar_lqr_settings.yaml  democar_mpc_settings.yaml  democar_purepursuit_settings.yaml
src/democar_core/include/: loadPath.h
src/democar_core/launch/: democar_lqr_dynamics.launch  democar_lqr_kinematics.launch  democar_mpc.launch  democar_purepursuit.launch
src/democar_core/src/: loadPath.cpp  lqr_control_dynamics.cpp  lqr_control_kinematics.cpp  mpc_control.cpp  purePursuit.cpp
src/democar_core/waypoints/: path1.csv
src/democar_description/: CMakeLists.txt  package.xml
src/democar_description/config/: democar.rviz
src/democar_description/launch/: democar_display.rviz.launch  democar_gazebo.launch
src/democar_description/urdf/: demo_car.urdf  demo_car_v2.urdf
src/democar_telop/: CMakeLists.txt  package.xml
src/democar_telop/include/: keyboard_control.h
src/democar_telop/src/: democar_telop_keyboard.cpp  keyboard_control.cpp
